# SFML-KRPG

./: .clang-format  .gitignore  .gitmodules  Aircraft.cpp  Aircraft.h  CMakeLists.txt  Core.cpp  Core.h  Entity.cpp  Entity.h  LICENSE.md  Makefile  README.md  ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h  RoomNode.cpp  RoomNode.h  SFMLGameEngine.drawio  SFML_TEST.sln  SFML_TEST.vcxproj  SFML_TEST.vcxproj.filters  SceneNode.cpp  SceneNode.h  SpriteNode.cpp  SpriteNode.h  World.cpp  World.h  editor.cpp  main.cpp
.github/workflows/: ci.yml  ubuntu-debug.yml
cmake/: CompileOptions.cmake  SFML.cmake  Sanitizers.cmake  VisualStudio.cmake
core/: CMakeLists.txt
core/include/: Category.hpp  EventQueue.hpp  Game.hpp  PlayerVision.hpp  SceneNode.hpp  Trace.hpp  World.hpp
core/include/Combat/: Melee.hpp  Projectile.hpp
core/include/Commands/: CombatCommand.hpp  Command.hpp  CommandList.hpp  CommandQueue.hpp  ComponentCommand.hpp  GraphicsCommand.hpp  PhysicsCommand.hpp  PlayerFireCommand.hpp  SwapPlayerTextureCommand.hpp  VelocityDiffCommand.hpp
core/include/Commands/Category/: Category.hpp  ComponentCategory.hpp  NodeCategory.hpp
core/include/Components/: AIKeyboardInput.hpp  AntonGraphics.hpp  AntonPhysics.hpp  BulletPhysics.hpp  Category.hpp  CollisionComponent.hpp  CombatComponent.hpp  Component.hpp  ComponentManager.hpp  GraphicsComponent.hpp  InputComponent.hpp  KeyboardInput.hpp  MouseKeyboardInput.hpp  PhysicsComponent.hpp  PlayerCombat.hpp  PlayerGraphics.hpp  PlayerPhysics.hpp  SimpleGraphics.hpp  SimplePhysics.hpp  TwoSpriteGraphics.hpp  UnitCombat.hpp
core/include/Components/Collision/: CollisionComponent.hpp  MeleeCollision.hpp  ProjectileCollision.hpp  UnitCollision.hpp
core/include/Components/Combat/: CombatComponent.hpp  UnitCombat.hpp
core/include/Components/Graphics/: Animation.hpp  AssetGraphics.hpp  EmptyGraphics.hpp  GraphicsComponent.hpp  SimpleGraphics.hpp  TwoSpriteGraphics.hpp  Utils.hpp
core/include/Components/Input/: AIKeyboardInput.hpp  EmptyInput.hpp  InputComponent.hpp  KeyboardInput.hpp
core/include/Components/Physics/: BulletPhysics.hpp  PhysicsComponent.hpp  SimplePhysics.hpp
core/include/Entities/: Anton.hpp  Entity.hpp  EyesDirection.hpp  GameObject.hpp  GameStaticObject.hpp  Killable.hpp  Player.hpp  Player2.hpp  PlayerContext.hpp  Unit.hpp  UnitContext.hpp  VelocityModule.hpp
core/include/Entities/Types/: EyesDirection.hpp  ObjectState.hpp  UnitContext.hpp
core/include/Raycasting/: PlayerVision.hpp  Trace.hpp
core/include/Resource/: ResourceHolder.hpp  ResourceIdentifiers.hpp  SpriteNode.hpp
core/include/Room/: ConnectionTypes.hpp  Door.hpp  Node.hpp  RoomConnectionTypes.hpp  RoomManager.hpp  RoomNode.hpp  RoomTypes.hpp  Types.hpp
core/include/Utils/: Assert.hpp  Filestream.hpp
core/src/: Game.cpp  PlayerVision.cpp  SceneNode.cpp  Trace.cpp  World.cpp
core/src/Combat/: Melee.cpp  Projectile.cpp
core/src/Commands/: SwapPlayerTextureCommand.cpp  VelocityDiffCommand.cpp
core/src/Components/: AIKeyboardInput.cpp  BulletPhysics.cpp  CombatComponent.cpp  Component.cpp  ComponentManager.cpp  GraphicsComponent.cpp  InputComponent.cpp  KeyboardInput.cpp  MouseKeyboardInput.cpp  PhysicsComponent.cpp  PlayerCombat.cpp  PlayerGraphics.cpp  PlayerPhysics.cpp  SimpleGraphics.cpp  SimplePhysics.cpp  TwoSpriteGraphics.cpp  UnitCombat.cpp
core/src/Components/Collision/: CollisionComponent.cpp  MeleeCollision.cpp  ProjectileCollision.cpp  UnitCollision.cpp
core/src/Components/Combat/: CombatComponent.cpp  UnitCombat.cpp
core/src/Components/Graphics/: Animation.cpp  AssetGraphics.cpp  GraphicsComponent.cpp  SimpleGraphics.cpp  TwoSpriteGraphics.cpp
core/src/Components/Input/: AIKeyboardInput.cpp  EmptyInput.cpp  InputComponent.cpp  KeyboardInput.cpp
core/src/Components/Physics/: BulletPhysics.cpp  PhysicsComponent.cpp  SimplePhysics.cpp
core/src/Entities/: Entity.cpp  GameObject.cpp  GameStaticObject.cpp  Killable.cpp  Player.cpp  Player2.cpp  Unit.cpp
core/src/Raycasting/: PlayerVision.cpp  Trace.cpp
core/src/Resource/: SpriteNode.cpp
core/src/Room/: Door.cpp  Node.cpp  RoomManager.cpp  RoomNode.cpp
core/src/Utils/: Assert.cpp  Filestream.cpp
data/: editor_walls.txt  first_room_walls.txt
editor/: CMakeLists.txt  editor.cpp
editor/include/: Editor.hpp  Wall.hpp
editor/src/: Editor.cpp  Wall.cpp
include/: Core.hpp  Door.hpp  Entity.hpp  Game.hpp  Killable.hpp  Player.hpp  PlayerContext.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  RoomConnectionTypes.hpp  RoomNode.hpp  RoomTypes.hpp  SceneNode.hpp  SpriteNode.hpp  World.hpp
src/: Aircraft.cpp  Aircraft.hpp  CMakeLists.txt  Core.cpp  Core.hpp  Door.cpp  Door.h  Entity.cpp  Entity.hpp  Game.cpp  Killable.cpp  Player.cpp  Player.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  RoomConnectionTypes.hpp  RoomNode.cpp  RoomNode.hpp  RoomTypes.hpp  SceneNode.cpp  SceneNode.hpp  SpriteNode.cpp  SpriteNode.hpp  World.cpp  World.hpp
test/: CMakeLists.txt
test/Room/: DoorTest.cpp
utility/: CMakeLists.txt
utility/include/Utils/: ToString.hpp
utility/src/Utils/: Filestream.cpp
